objects/privateAppEx__PrXToolingInfo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>privateAppEx__ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Pwd__c</fullName>
        <label>Pwd</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__ToolingUrl__c</fullName>
        <label>Tooling Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Username__c</fullName>
        <label>Username</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Private AppExchange Tooling Info</label>
</CustomObject>